--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-aaiosqlite==0.19.0
+aiosqlite==0.19.0
 PyNaCl==1.5.0
 aiocache==0.12.1
 aiohttp==3.8.4
@@ -14,7 +14,6 @@ charset-normalizer==3.1.0
 disnake==2.8.1
 distlib==0.3.6
 dnspython==2.3.0
-easy-pil==0.2.2
 filelock==3.12.0
 frozenlist==1.3.3
 googletrans==3.1.0a0
