--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,14 @@
-aiosqlite==0.19.0
-selectolax==0.3.14
-PyNaCl==1.5.0
 aiocache==0.12.1
+aiofiles==23.2.1
 aiohttp==3.8.4
 aiosignal==1.3.1
+aiosqlite==0.19.0
 async-timeout==4.0.2
 attrs==23.1.0
 beautifulsoup4==4.12.2
 bs4==0.0.1
 certifi==2022.12.7
+cffi==1.15.1
 cfgv==3.3.1
 chardet==3.0.4
 charset-normalizer==3.1.0
@@ -36,11 +36,14 @@ Pillow==9.5.0
 platformdirs==3.5.0
 pre-commit==3.3.1
 psutil==5.9.5
+pycparser==2.21
 pymongo==4.3.3
+PyNaCl==1.5.0
 python-dotenv==1.0.0
 PyYAML==6.0
 requests==2.30.0
 rfc3986==1.5.0
+selectolax==0.3.14
 sniffio==1.3.0
 soupsieve==2.4.1
 tqdm==4.65.0
