--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ h11==0.9.0
 h2==3.2.0
 hpack==3.0.0
 hstspreload==2023.1.1
+html5lib==1.1
 httpcore==0.9.1
 httpx==0.13.3
 hyperframe==5.2.0
@@ -44,10 +45,12 @@ PyYAML==6.0
 requests==2.30.0
 rfc3986==1.5.0
 selectolax==0.3.14
+six==1.16.0
 sniffio==1.3.0
 soupsieve==2.4.1
 tqdm==4.65.0
 typing_extensions==4.5.0
 urllib3==2.0.2
 virtualenv==20.23.0
+webencodings==0.5.1
 yarl==1.9.2
