--- a/.github/workflows/docker_image.yml
+++ b/.github/workflows/docker_image.yml
@@ -30,7 +30,7 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: .
-          file: ./dockerfile
+          file: ./Dockerfile
           push: true
           cache-from: type=registry,ref=ghcr.io/mr-robot-discord-bot/mr-robot:latest
           cache-to: type=inline
