--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ async-timeout==4.0.2
 attrs==23.1.0
 beautifulsoup4==4.12.2
 bs4==0.0.1
+cachetools==5.3.2
 certifi==2022.12.7
 cffi==1.15.1
 cfgv==3.3.1
@@ -17,7 +18,14 @@ distlib==0.3.6
 dnspython==2.3.0
 filelock==3.12.0
 frozenlist==1.3.3
+google-ai-generativelanguage==0.4.0
+google-api-core==2.17.1
+google-auth==2.28.1
+google-generativeai==0.3.2
+googleapis-common-protos==1.62.0
 googletrans==3.1.0a0
+grpcio==1.62.0
+grpcio-status==1.62.0
 h11==0.9.0
 h2==3.2.0
 hpack==3.0.0
@@ -32,11 +40,14 @@ mafic==2.3.0
 memoization==0.4.0
 multidict==6.0.4
 nodeenv==1.7.0
-openai==0.27.6
 Pillow==9.5.0
 platformdirs==3.5.0
 pre-commit==3.3.1
+proto-plus==1.23.0
+protobuf==4.25.3
 psutil==5.9.5
+pyasn1==0.5.1
+pyasn1-modules==0.3.0
 pycparser==2.21
 pymongo==4.3.3
 PyNaCl==1.5.0
@@ -44,6 +55,7 @@ python-dotenv==1.0.0
 PyYAML==6.0
 requests==2.30.0
 rfc3986==1.5.0
+rsa==4.9
 selectolax==0.3.14
 six==1.16.0
 sniffio==1.3.0
