--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ googletrans = "3.1.0a0"
 psutil = "^5.9.8"
 aiocache = "^0.12.2"
 setuptools = "^69.5.1"
+pynacl = "^1.5.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.4.2"
